Fix comment is covered if page height is short

--- a/vue-project/src/styles/app.scss
+++ b/vue-project/src/styles/app.scss
@@ -463,6 +463,10 @@ nav {
         font-size: 14px;
     }
 
+    .thoughts-container {
+      margin-bottom: 120px;
+    }
+
     pre {
         white-space: pre-wrap;       /* Since CSS 2.1 */
         white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
